x overflow fix?

--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -186,3 +186,7 @@ li:hover {
     color: lightgray;
     font-style: italic;
 }
+
+html {
+    overflow-x: hidden;
+}
